14447
Loading cps library classes from a jar file, shift/reset retain their transformed types after the first compilation:
```scala
Welcome to Scala version 2.8.0.r18553-b20090823183706 (Java HotSpot(TM) 64-Bit Server VM, Java 1.6.0_13).
Type in expressions to have them evaluated.
Type :help for more information.

scala> import scala.continuations._                         
import scala.continuations._

scala> import scala.continuations.ControlContext._          
import scala.continuations.ControlContext._

scala> def bar() = shift { k: (String => String) => k("1") }
bar: ()String @scala.continuations.docps @scala.continuations.cps[String,String]

scala> reset { bar() }                                      
res0: String = 1

scala> reset { bar() }
<console>:12: error: type mismatch;
 found   : String @scala.continuations.cps[String,String]
 required: scala.continuations.ControlContext[?,?,?]
       reset { bar() }
                  ^

scala> 
```
